[NO JIRA]: Fix pagination alignment

--- a/packages/bpk-component-pagination/src/BpkPaginationList.module.scss
+++ b/packages/bpk-component-pagination/src/BpkPaginationList.module.scss
@@ -24,6 +24,7 @@ $bpk-spacing-v2: true;
   display: flex;
   margin: 0;
   padding: 0;
+  align-items: baseline;
   list-style: none;
 
   &__item {
